fix: further Dnf tests and fixes